added kayako logo and links

--- a/app/index.html
+++ b/app/index.html
@@ -250,7 +250,7 @@
               <div class="media">
                 <div class="media-left">
                   <figure class="image is-128x128">
-                    <img src="images/logo_callsign.png" alt="Image">
+                    <a href="https://www.callsign.com/"><img src="images/logo_callsign.png" alt="Image"></a>
                   </figure>
                 </div>
                 <div class="media-content">
@@ -268,7 +268,7 @@
               <div class="media">
                 <div class="media-left">
                   <figure class="image is-128x128">
-                    <img src="images/logo_nexmo.png" alt="Image">
+                    <a href="https://www.nexmo.com/"><img src="images/logo_nexmo.png" alt="Image"></a>
                   </figure>
                 </div>
                 <div class="media-content">
@@ -286,7 +286,7 @@
               <div class="media">
                 <div class="media-left">
                   <figure class="image is-128x128">
-                    <img src="images/logo_divide.png" alt="Image" style="margin-top:5px;">
+                    <a href="http://divide.com/"><img src="images/logo_divide.png" alt="Image" style="margin-top:5px;"></a>
                   </figure>
                 </div>
                 <div class="media-content">
@@ -304,7 +304,7 @@
               <div class="media">
                 <div class="media-left">
                   <figure class="image is-128x128">
-                    <img src="images/logo_import.png" alt="Image">
+                    <a href="https://import.io"><img src="images/logo_import.png" alt="Image"></a>
                   </figure>
                 </div>
                 <div class="media-content">
@@ -322,7 +322,7 @@
               <div class="media">
                 <div class="media-left">
                   <figure class="image is-128x128">
-                    <img src="images/logo_trouva.png" alt="Image">
+                    <a href="https://www.trouva.com/"><img src="images/logo_trouva.png" alt="Image"></a>
                   </figure>
                 </div>
                 <div class="media-content">
@@ -330,7 +330,7 @@
                 </div>
               </div>
               <div class="content">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, vitae dignissimos
+                The platform that allows you to find the best boutiques and independent shops. Doubled the team since joining our community
               </div>
             </div>
           </div>
@@ -340,7 +340,7 @@
               <div class="media">
                 <div class="media-left">
                   <figure class="image is-128x128">
-                    <img src="images/logo_flatclub.png" alt="Image">
+                    <a href="https://flat-club.com"><img src="images/logo_flatclub.png" alt="Image"></a>
                   </figure>
                 </div>
                 <div class="media-content">
@@ -348,7 +348,7 @@
                 </div>
               </div>
               <div class="content">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint consectetur, quia magni officia explicabo
+                The best marketplace that brings together people with common values and needs to find medium term accommodation
               </div>
             </div>
           </div>
@@ -358,7 +358,7 @@
               <div class="media">
                 <div class="media-left">
                   <figure class="image is-128x128">
-                    <img src="images/logo_bmv.png" alt="Image">
+                    <a href="http://www.kayako.com/"><img src="images/logo_kayako.png" alt="Image"></a>
                   </figure>
                 </div>
                 <div class="media-content">
@@ -366,7 +366,7 @@
                 </div>
               </div>
               <div class="content">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti ab ad nisi, consectetur modi
+                One of the world's most widely used web-based help desk software, customer service software and support ticket software.
               </div>
             </div>
           </div>
@@ -376,7 +376,25 @@
               <div class="media">
                 <div class="media-left">
                   <figure class="image is-128x128">
-                    <img src="images/logo_jukedeck.png" alt="Image">
+                    <a href="http://www.buzzmyvideos.com/"><img src="images/logo_bmv.png" alt="Image"></a>
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-6 is-text-right">Member</p>
+                </div>
+              </div>
+              <div class="content">
+                From Ex-Youtubers, the platform that empowers content creators, working with them to grow their channels to the next level
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-128x128">
+                    <a href="https://www.jukedeck.com"><img src="images/logo_jukedeck.png" alt="Image"></a>
                   </figure>
                 </div>
                 <div class="media-content">
