--- a/app/index.html
+++ b/app/index.html
@@ -166,20 +166,20 @@
   <section class="section">
     <nav class="navbar navbar-stats">
       <div class="navbar-item is-text-centered">
-        <p class="heading">Members</p>
-        <p class="title">1300+</p>
+        <p class="heading">Startups</p>
+        <p class="title">~1000</p>
       </div>
       <div class="navbar-item is-text-centered">
         <p class="heading">Nationalities</p>
-        <p class="title">58</p>
+        <p class="title">60+</p>
       </div>
       <div class="navbar-item is-text-centered">
         <p class="heading">Events organised</p>
-        <p class="title">365 per year</p>
+        <p class="title">Over 365 per year</p>
       </div>
       <div class="navbar-item is-text-centered">
         <p class="heading">Raised</p>
-        <p class="title">$3b</p>
+        <p class="title">~$1b</p>
       </div>
     </nav>
   </section>
@@ -191,48 +191,50 @@
         <div class="full-bg-text">
           <h3 class="title">
             Global Community
-          </h3> TechHub is the global community for technology entrepreneurs and startups. We work with over 700 companies around the world to help them scale.
+          </h3> TechHub is the global community for technology entrepreneurs and startups. We work with nearly 1000 startups around the world to help them scale.
         </div>
       </div>
       <div class="column full-bg full-bg-flex-space">
         <div class="full-bg-text">
           <h3 class="title">
-            Flexible Work Space
+            Flexible Workspace
           </h3>The TechHub network enables members to work smarter, develop faster and increase their chances of startup success.
         </div>
       </div>
       <div class="column full-bg full-bg-events">
         <div class="full-bg-text">
           <h3 class="title">
-            Startup Support Program
-          </h3> Events / programmes ipsum dolor sit amet, consectetur adipisicing elit. Illum amet porro sed cupiditate numquam quidem dolores.
+            Startup Support Programme
+          </h3> We work hard to understand the needs of startups at all stages. Our startups core programme helps entrepreneurs learn, meet investors, test their ideas and collaborate with each other.
         </div>
       </div>
     </div>
   </section>
 
   <section class="section is-paddingless">
-    <h2 class="title is-text-centered" style="margin-top:10px;margin-bottom:20px;">Memberships</h2>
+    <a href=""><h2 class="title is-text-centered" style="margin-top:10px;margin-bottom:20px;">Become a Member!</h2>
+    </a>
+    <h3 class="subtitle is-text-centered">All TechHub memberships are global, giving you access to every TechHub in the world and our startup support programmes.</h3>
     <div class="columns columns-minimal-border">
       <div class="column full-bg full-bg-flex">
         <div class="full-bg-text">
           <h3 class="title">
             Flex
-          </h3> Lonely Founder? Working from home? Join the community and drop-in whenever you're around!
+          </h3> Lonely Founder? New to the ecosystem? Working from home? Join the global community and drop-in whenever you're around!
         </div>
       </div>
       <div class="column full-bg full-bg-resident">
         <div class="full-bg-text">
           <h3 class="title">
             Resident
-          </h3>Your own desk in our open plan resident area! 24/7 access for individuals and teams.
+          </h3>Whether it's just you or as your team begins to grow, become part of the community with your own desk and 24/7 access.
         </div>
       </div>
       <div class="column full-bg full-bg-team">
         <div class="full-bg-text">
           <h3 class="title">
             Team
-          </h3> Your very own private space. Stay within the community as you grow. Teams of 4 or more.
+          </h3> We understand the challenges of high growth startups too. Get your very own private space within TechHub and stay within the community as you grow!
         </div>
       </div>
     </div>
@@ -258,7 +260,7 @@
                 </div>
               </div>
               <div class="content">
-                Your simple secure access to everything! The best authentication app and a proud TechHub member for over 3 years.
+                Our amazing members, Callsign, are rocking the world of encryption & authentication working with the world's leading financial institutions.
               </div>
             </div>
           </div>
@@ -276,7 +278,7 @@
                 </div>
               </div>
               <div class="content">
-                Reinventing communication. Started with a team of 2 at TechHub and outgrew to 60+ over 3 years.
+                We are proud to have been home to one of the world's leading Voice and SMS API providers, who are an amazing part of our community.
               </div>
             </div>
           </div>
@@ -294,7 +296,7 @@
                 </div>
               </div>
               <div class="content">
-                Divide is giving people the best mobile experience at work. Some more text here please.
+                Now part of Google, Divide allows people to carry one device instead of two to work, making BYOD safe for everyone.
               </div>
             </div>
           </div>
@@ -312,7 +314,7 @@
                 </div>
               </div>
               <div class="content">
-                The world's leading web data extraction platform for businesses and individuals, closed $17.3M up to date.
+                The world's leading web data extraction platform for businesses and individuals. Started in TechHub and has since closed $17.3M in investment.
               </div>
             </div>
           </div>
@@ -366,7 +368,7 @@
                 </div>
               </div>
               <div class="content">
-                One of the world's most widely used web-based help desk software, customer service software and support ticket software.
+                We are proud to be home to Kayako, one of the world's most widely used web-based help desk and customer service software.
               </div>
             </div>
           </div>
@@ -384,7 +386,7 @@
                 </div>
               </div>
               <div class="content">
-                From Ex-Youtubers, the platform that empowers content creators, working with them to grow their channels to the next level
+                Created by former YouTubers, BuzzMyVideos empowers content creators to grow their channels to the next level. TechHub Members since 2012.
               </div>
             </div>
           </div>
@@ -402,7 +404,7 @@
                 </div>
               </div>
               <div class="content">
-                Royalty-free soundtracks. Started at TechHub when there was only the CEO and grew to over 15 people on the team.
+                Jukedeck's AI platform creates incredible royalty-free soundtracks. Amazing community players! Winners of the main prize at TC Disrupt, Le Web & Pitch@Palace.
               </div>
             </div>
           </div>
@@ -416,14 +418,15 @@
       <div class="container">
         <div class="columns is-vcentered">
           <div class="column is-half is-left">
-            <p class="title">TechHub <strong>Newsletter</strong></p>
-            <p class="subtitle">Get to know what's happening in our Community!</p>
+            <p class="title">TechHub <strong>News</strong></p>
+            <p class="subtitle">Get to know what's happening in our Global Community!</p>
           </div>
           <div class="column is-half">
             <form action="https://techhub.us1.list-manage.com/subscribe/post-json?u=031b1985139bd9da3b27eff77&id=565a99f7b0" id="mce-form">
               <div class="control is-horizontal">
                 <input type="email" value="" name="EMAIL" class="input is-flat required email" id="mce-EMAIL" placeholder="email address" required="" aria-required="true">
                 <button id="mce-subscribe-button" type="submit" name="subscribe" class="button is-primary is-outlined is-inverted">Subscribe</button>
+                <button class="button is-primary is-outlined is-inverted">Dropdown here</button>
               </div>
             </form>
             <div class="mce-responses is-hidden">
@@ -438,7 +441,7 @@
 
   <section class="section section-partners is-paddingless" id="partners">
     <div class="container">
-      <h2 class="title is-5 is-text-centered">Partners</h2>
+      <h2 class="title is-5 is-text-centered">Our Partners</h2>
       <div class="is-text-centered">
         <a href="https://www.googleforentrepreneurs.com"><img class="image img-logo-gfe" src="images/logo_gfe.png" alt="Google for Entrepreneurs"></a>
         <a href="http://www.btplc.com/btinfinitylab/"><img class="image img-logo-bt" src="images/logo_bt.png" alt="BT"></a>
