--- a/app/index.html
+++ b/app/index.html
@@ -105,7 +105,7 @@
             <a href="https://apply.techhub.com">Memberships</a>
           </span>
             <span class="header-item is-dark-bg">
-            <a href="https://www.techhub.com/events/">Events</a>
+            <a href="https://www.techhub.com/events/">Programme</a>
           </span>
             <span class="header-item is-dark-bg">
             <a href="https://blog.techhub.com">Blog</a>
@@ -135,17 +135,7 @@
         <br class="is-hidden-mobile">for technology startups
       </h1>
         <a href="#" class="button is-home-cta is-medium">Become a member</a>
-        <a href="#" class="button is-home-cta is-medium">Attend our Events</a>
-      </div>
-    </div>
-
-    <!-- Hero footer: will stick at the bottom -->
-    <div class="hero-footer hero-home">
-      <div class="is-text-centered">
-        <div class="wrapper-gfe">
-          <div class="text-gfe">Global Partner</div>
-          <a href="https://www.googleforentrepreneurs.com"><img src="images/gfe.png" alt="Google for Entrepreneurs" class="logo-gfe"></a>
-        </div>
+        <a href="#" class="button is-home-cta is-medium">Attend an Event</a>
       </div>
       <nav class="tabs is-centered tabs-home is-hidden-mobile">
         <div class="container is-text-centered">
@@ -161,25 +151,30 @@
         </div>
       </nav>
     </div>
+
+    <!-- Hero footer: will stick at the bottom -->
+    <div class="hero-footer hero-home">
+
+    </div>
   </section>
 
   <section class="section">
     <nav class="navbar navbar-stats">
       <div class="navbar-item is-text-centered">
         <p class="heading">Startups</p>
-        <p class="title">~1000</p>
+        <p class="title">750+</p>
       </div>
       <div class="navbar-item is-text-centered">
         <p class="heading">Nationalities</p>
         <p class="title">60+</p>
       </div>
       <div class="navbar-item is-text-centered">
-        <p class="heading">Events organised</p>
-        <p class="title">Over 365 per year</p>
+        <p class="heading">Events</p>
+        <p class="title">365+ per year</p>
       </div>
       <div class="navbar-item is-text-centered">
-        <p class="heading">Raised</p>
-        <p class="title">~$1b</p>
+        <p class="heading">Members Raised</p>
+        <p class="title">$1b+</p>
       </div>
     </nav>
   </section>
@@ -191,14 +186,7 @@
         <div class="full-bg-text">
           <h3 class="title">
             Global Community
-          </h3> TechHub is the global community for technology entrepreneurs and startups. We work with nearly 1000 startups around the world to help them scale.
-        </div>
-      </div>
-      <div class="column full-bg full-bg-flex-space">
-        <div class="full-bg-text">
-          <h3 class="title">
-            Flexible Workspace
-          </h3>The TechHub network enables members to work smarter, develop faster and increase their chances of startup success.
+          </h3> TechHub is the global community for technology entrepreneurs and startups. We work with 750+ startups around the world to help them scale.
         </div>
       </div>
       <div class="column full-bg full-bg-events">
@@ -208,29 +196,36 @@
           </h3> We work hard to understand the needs of startups at all stages. Our startups core programme helps entrepreneurs learn, meet investors, test their ideas and collaborate with each other.
         </div>
       </div>
+      <div class="column full-bg full-bg-flex-space">
+        <div class="full-bg-text">
+          <h3 class="title">
+            Flexible Workspace
+          </h3>The TechHub network enables members to work smarter, develop faster and increase their chances of startup success.
+        </div>
+      </div>
     </div>
   </section>
 
   <section class="section is-paddingless">
     <a href=""><h2 class="title is-text-centered" style="margin-top:10px;margin-bottom:20px;">Become a Member!</h2>
     </a>
-    <h3 class="subtitle is-text-centered">All TechHub memberships are global, giving you access to every TechHub in the world and our startup support programmes.</h3>
+    <h3 class="subtitle is-text-centered">All TechHub memberships are global, giving you access to our startup support programmes & every TechHub in the world.</h3>
     <div class="columns columns-minimal-border">
-      <div class="column full-bg full-bg-flex">
+      <div class="column full-bg hover full-bg-flex">
         <div class="full-bg-text">
           <h3 class="title">
             Flex
           </h3> Lonely Founder? New to the ecosystem? Working from home? Join the global community and drop-in whenever you're around!
         </div>
       </div>
-      <div class="column full-bg full-bg-resident">
+      <div class="column full-bg hover full-bg-resident">
         <div class="full-bg-text">
           <h3 class="title">
             Resident
           </h3>Whether it's just you or as your team begins to grow, become part of the community with your own desk and 24/7 access.
         </div>
       </div>
-      <div class="column full-bg full-bg-team">
+      <div class="column full-bg hover full-bg-team">
         <div class="full-bg-text">
           <h3 class="title">
             Team
@@ -243,7 +238,7 @@
   <section class="section small-padding">
     <div class="container is-fluid">
       <h2 class="title is-text-centered title-section">
-        Alumni & Members
+        Our Members & Alumni
       </h2>
       <div class="container is-fluid">
         <div class="carousel carousel-members">
