work in progress locations for mailchimp

--- a/app/index.html
+++ b/app/index.html
@@ -418,10 +418,23 @@
           </div>
           <div class="column is-half">
             <form action="https://techhub.us1.list-manage.com/subscribe/post-json?u=031b1985139bd9da3b27eff77&id=565a99f7b0" id="mce-form">
-              <div class="control is-horizontal">
+              <div class="control has-icon is-horizontal">
                 <input type="email" value="" name="EMAIL" class="input is-flat required email" id="mce-EMAIL" placeholder="email address" required="" aria-required="true">
+                <i class="fa fa-envelope"></i>
+                <span class="select">
+    <select>
+      <option value="" disabled selected>Select your location</option>
+      <option>Global</option>
+      <option>Bangalore</option>
+      <option>Bucharest</option>
+      <option>London</option>
+      <option>Madrid</option>
+      <option>Riga</option>
+      <option>Swansea</option>
+      <option>Warsaw</option>
+    </select>
+  </span>
                 <button id="mce-subscribe-button" type="submit" name="subscribe" class="button is-primary is-outlined is-inverted">Subscribe</button>
-                <button class="button is-primary is-outlined is-inverted">Dropdown here</button>
               </div>
             </form>
             <div class="mce-responses is-hidden">
