fixes and updates

--- a/app/index.html
+++ b/app/index.html
@@ -163,7 +163,7 @@
                 <a href="https://apply.techhub.com">Memberships</a>
               </span>
               <span class="header-item is-dark-bg">
-                <a href="https://www.techhub.com/events/">Programme</a>
+                <a href="https://www.techhub.com/events/">Programmes</a>
               </span>
               <span class="header-item is-dark-bg">
                 <a href="https://blog.techhub.com">Blog</a>
@@ -192,8 +192,8 @@
             The global community
             <br class="is-hidden-mobile">for technology startups
           </h1>
-          <a href="#" class="button is-home-cta is-medium">Become a member</a>
-          <a href="#" class="button is-home-cta is-medium">Attend an Event</a>
+          <a href="#memberships" id="join-the-community" class="button is-home-cta is-medium">Join the Community</a>
+          <a href="https://www.techhub.com/events/" class="button is-home-cta is-medium">Attend an Event</a>
         </div>
         <div class="locations-button-mobile is-hidden-desktop" id="modal-locations-open">
           Locations
@@ -281,7 +281,7 @@
       </div>
     </section>
 
-    <section class="section is-paddingless">
+    <section id="memberships" class="section section-membership is-paddingless">
       <a href="">
         <h2 class="title is-text-centered" style="margin-top:10px;margin-bottom:20px;">Become a Member!</h2>
       </a>
@@ -423,7 +423,7 @@
                   </div>
                 </div>
                 <div class="content">
-                  The best marketplace that brings together people with common values and needs to find medium term accommodation
+                  Our members, Flatclub, are the best marketplace that brings together people with common values and needs to find medium term accommodation
                 </div>
               </div>
             </div>
@@ -510,7 +510,7 @@
                   <div class="column is-8">
                     <div class="control control-full">
                       <span class="select">
-                        <select>
+                        <select id="select-location-newsletter" required="">
                           <option value="" disabled selected>Select your location</option>
                           <option value="global">Global</option>
                           <option value="bangalore">Bangalore</option>
@@ -533,7 +533,7 @@
               </form>
               <div class="mce-responses is-hidden">
                 <div class="notification is-danger response is-hidden" id="mce-error-response"></div>
-                <div class="notification is-success response is-hidden" id="mce-success-response">Almost finished... We need to confirm your email address. To complete the subscription process, please click the link in the email we just sent you.</div>
+                <div class="notification is-success response is-hidden" id="mce-success-response"></div>
               </div>
             </div>
           </div>
@@ -543,9 +543,12 @@
 
     <section class="section section-partners is-paddingless" id="partners">
       <div class="container">
-        <h2 class="title is-5 is-text-centered">Our Partners</h2>
+        <h2 class="title is-5 is-text-centered">Global Partner</h2>
         <div class="is-text-centered">
           <a href="https://www.googleforentrepreneurs.com"><img class="image img-logo-gfe" src="images/logo_gfe.png" alt="Google for Entrepreneurs"></a>
+        </div>
+        <div class="is-text-centered">
+          <h2 class="title is-5 is-text-centered partner-bt">Proud to partner with</h2>
           <a href="http://www.btplc.com/btinfinitylab/"><img class="image img-logo-bt" src="images/logo_bt.png" alt="BT"></a>
         </div>
       </div>
