working on deploy

--- a/app/index.html
+++ b/app/index.html
@@ -287,7 +287,7 @@
       </a>
       <h3 class="subtitle is-text-centered">All TechHub memberships are global, giving you access to our startup support programmes & every TechHub in the world.</h3>
       <div class="columns columns-minimal-border">
-        <div class="column full-bg hover full-bg-flex">
+        <div class="column full-bg hover full-bg-flex full-bg-membership">
           <div class="full-bg-text">
             <h3 class="title">
               Flex
@@ -295,14 +295,14 @@
             Lonely Founder? New to the ecosystem? Working from home? Join the global community and drop-in whenever you're around!
           </div>
         </div>
-        <div class="column full-bg hover full-bg-resident">
+        <div class="column full-bg hover full-bg-resident full-bg-membership">
           <div class="full-bg-text">
             <h3 class="title">
               Resident
             </h3>Whether it's just you or as your team begins to grow, become part of the community with your own desk and 24/7 access.
           </div>
         </div>
-        <div class="column full-bg hover full-bg-team">
+        <div class="column full-bg hover full-bg-team full-bg-membership">
           <div class="full-bg-text">
             <h3 class="title">
               Team
