--- a/app/index.html
+++ b/app/index.html
@@ -129,7 +129,7 @@
       <button id="modal-locations-close" class="modal-close modal-close-left"></button>
     </div>
 
-    <div class="button_container" id="toggle">
+    <div class="button_container is-hidden-desktop" id="toggle">
       <span class="top"></span>
       <span class="middle"></span>
       <span class="bottom"></span>
@@ -158,7 +158,7 @@
           <div class="container container-header">
             <div class="header-left"></div>
             <div class="header-center"></div>
-            <div class="header-right header-menu">
+            <div class="header-right header-menu is-hidden-touch">
               <span class="header-item is-dark-bg">
                 <a href="https://apply.techhub.com">Memberships</a>
               </span>
@@ -189,8 +189,7 @@
         <div class="container">
           <img src="https://d1e6a3jvdxo3ln.cloudfront.net/images/website/techhub_3d_logo_png.png" alt="Logo" class="logo-home">
           <h1 class="title title-home is-th-font">
-            The global community
-            <br class="is-hidden-mobile">for technology startups
+            The global community<span class="is-hidden-desktop">&nbsp;</span><br class="is-hidden-mobile">for technology startups
           </h1>
           <a href="#memberships" id="join-the-community" class="button is-home-cta is-medium">Join the Community</a>
           <a href="https://www.techhub.com/events/" class="button is-home-cta is-medium">Attend an Event</a>
