added jobs, fixed background

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TechHub - The Global Community for Technology Startups</title>
 
+  <meta property="og:url" content="https://www.techhub.com" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="TechHub - The Global Community for Technology Startups" />
+  <meta property="og:description" content="TechHub is the global community for technology entrepreneurs and startups. We work with over 700 companies around the world to help them scale." />
+  <meta property="og:image" content="https://d1e6a3jvdxo3ln.cloudfront.net/images/website/techhub_3d_logo_png.png" />
+
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <script type="text/javascript">
     WebFontConfig = {
@@ -68,7 +74,8 @@
           a
       };
       "undefined" != typeof exports
-        ? exports.loadCSS = n : e.loadCSS = n
+        ?
+        exports.loadCSS = n : e.loadCSS = n
     }("undefined" != typeof global ? global : this);
     loadCSS('https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css');
   </script>
@@ -134,10 +141,13 @@
           <a href="https://apply.techhub.com">Memberships</a>
         </li>
         <li>
-          <a href="https://www.techhub.com/events/">Events</a>
+          <a href="https://www.techhub.com/events/">Programmes</a>
         </li>
         <li>
           <a href="https://blog.techhub.com">Blog</a>
+        </li>
+        <li>
+          <a href="https://jobs.techhub.com">Jobs</a>
         </li>
         <li>
           <a href="https://www.techhub.com/contact-us/">Contact Us</a>
@@ -160,6 +170,9 @@
               </span>
             <span class="header-item is-dark-bg">
                 <a href="https://blog.techhub.com">Blog</a>
+              </span>
+            <span class="header-item is-dark-bg">
+                <a href="https://jobs.techhub.com/">Jobs</a>
               </span>
             <span class="header-item is-dark-bg">
                 <a href="https://www.techhub.com/contact-us/" class="button is-transparent">
@@ -554,9 +567,8 @@
               <li>
                 <a href="https://www.techhub.com/staff/">Team</a>
               </li>
-              <!-- <li><a href="https://www.techhub.com/gallery/">Gallery</a></li> -->
               <li>
-                <a href="https://www.techhub.com/jobs/">Jobs</a>
+                <a href="https://www.techhub.com/jobs/">Careers</a>
               </li>
               <li>
                 <a href="https://www.techhub.com/press/">Press</a>
