added logo for facebook share

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="TechHub - The Global Community for Technology Startups" />
   <meta property="og:description" content="TechHub is the global community for technology entrepreneurs and startups. We work with over 700 companies around the world to help them scale." />
-  <meta property="og:image" content="https://d1e6a3jvdxo3ln.cloudfront.net/images/website/techhub_3d_logo_png.png" />
+  <meta property="og:image" content="images/logo_for_facebook.jpg" />
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <script type="text/javascript">
